[package]
name = "voting_system_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.17.1"
candid = "0.10.13"
ic-stable-structures = "0.5.6"
serde = { version = "1.0.219", features = ["derive"] }
ic_principal = "0.1.1"