[package]
name = "voting_counter_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8.4"
ic-cdk = "0.7.0"
ic-stable-structures = "0.5.0"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
ic-cdk-timers = "0.1.0"